# parcellation_boundaries

./: .gitignore  README.md  pyproject.toml  simplification_explorer.ipynb
benchmark/: fast_renderer.py  fast_renderer_v2.py  run_benchmark_full.py  svg_renderer.py
parcellation_boundaries/: boundary.py  evaluate.py  half_edge.py  load_freesurfer_data.py  simplify.py  validate.py
scripts/: evaluate_all.py  evaluate_filter_sweep.py  export_patches.py  fill_filter_sweep.py  onset_coincidence.py  summarize_claims_v2.py  warm_cache.py
