[project]
name = "parcellation_boundaries"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.5.0",
    "shapely>=1.8.0",
    "matplotlib>=3.4.3",
    "numpy>=1.21.3",
    "scipy>=1.7.1",
    "plotly>=6.0.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "nbt-core",
    "anywidget>=0.11.0",
    "topojson>=1.10",
    "simplification>=0.7.14",
    "ipympl>=0.10.0",
    "nibabel>=5.4.2",
    "mplcursors>=0.7.1",
]

[tool.uv.sources]
nbt-core = { path = "../NBT-core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
